--- a/apps/ridi-router/docker-compose-base.yaml
+++ b/apps/ridi-router/docker-compose-base.yaml
@@ -8,6 +8,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ${RIDI_DATA_DIR}:/ridi-data:rw
+    user: ridi:deno
     environment:
       - RIDI_DATA_DIR:${RIDI_DATA_DIR}
     healthcheck:
