--- a/apps/ridi-router/otel-config.yaml
+++ b/apps/ridi-router/otel-config.yaml
@@ -1,7 +1,7 @@
 receivers:
   otlp:
     protocols:
-      grpc:
+      http:
         endpoint: 0.0.0.0:4317
   filelog/std:
     include: [ /var/log/**log ]
