--- a/apps/ridi-router/.env.example
+++ b/apps/ridi-router/.env.example
@@ -8,4 +8,5 @@ COOLIFY_API_URL=http://localhost:8080/api/v1
 COOLIFY_TOKEN=ndsdl
 COOLIFY_DEPLOYMENT_ID_ROUTER_HANDLER=lslfd
 COOLIFY_DEPLOYMENT_ID_MAP_DATA_HANDLER=dlkslkf
+RIDI_ENV_NAME=deploy-handler
 RIDI_ENV=local
