--- a/services/map-preview-service/package.json
+++ b/services/map-preview-service/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
-    "@fastify/vite": "8.0.0-alpha.2",
+    "@fastify/vite": "8.1.3",
     "@protomaps/basemaps": "^5.0.0",
     "@ridi/geo-maps": "workspace:^",
     "@ridi/logger": "workspace:^",
