--- a/services/cfw-api/package.json
+++ b/services/cfw-api/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "@ridi/cfw-api",
-  "scripts": {
-    "dev": "wrangler dev",
-    "build": "wrangler deploy --dry-run --minify --outdir dist && pnpm run sentry:sourcemaps",
-    "deploy": "wrangler deploy --no-bundle ./dist/index.js && pnpm run release:fin",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-    "release:new": "sentry-cli releases new \"ridi-apps-api@$(sentry-cli releases propose-version)\" && sentry-cli releases set-commits \"ridi-apps-api@$(sentry-cli releases propose-version)\" --auto --ignore-missing",
-    "release:fin": "sentry-cli releases finalize \"ridi-apps-api@$(sentry-cli releases propose-version)\"",
-    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org hood-software --project ridi-apps-api ./dist && sentry-cli sourcemaps upload --org hood-software --project ridi-apps-api ./dist"
-  },
-  "dependencies": {
-    "@ridi/api-contracts": "workspace:^",
-    "@ridi/db-queries": "workspace:^",
-    "@ridi/logger": "workspace:^",
-    "@ridi/maps-api": "workspace:^",
-    "@ridi/messaging": "workspace:^",
-    "@ridi/stripe-api": "workspace:^",
-    "@sentry/cli": "^2.42.4",
-    "@sentry/cloudflare": "^9.8.0",
-    "@supabase/supabase-js": "^2.48.1",
-    "@ts-rest/serverless": "^3.51.0",
-    "@turf/turf": "^7.2.0",
-    "pino": "^9.6.0",
-    "postgres": "^3.4.5",
-    "remeda": "^2.20.0",
-    "resend": "^4.5.1",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250129.0",
-    "wrangler": "^4.12.0"
-  }
+	"name": "@ridi/cfw-api",
+	"scripts": {
+		"dev": "wrangler dev",
+		"build": "wrangler deploy --dry-run --minify --outdir dist && pnpm run sentry:sourcemaps",
+		"build:pure": "wrangler deploy --dry-run --minify --outdir dist",
+		"deploy:pure": "wrangler deploy --no-bundle ./dist/index.js",
+		"deploy": "wrangler deploy --no-bundle ./dist/index.js && pnpm run release:fin",
+		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
+		"release:new": "sentry-cli releases new \"ridi-apps-api@$(sentry-cli releases propose-version)\" && sentry-cli releases set-commits \"ridi-apps-api@$(sentry-cli releases propose-version)\" --auto --ignore-missing",
+		"release:fin": "sentry-cli releases finalize \"ridi-apps-api@$(sentry-cli releases propose-version)\"",
+		"sentry:sourcemaps": "sentry-cli sourcemaps inject --org hood-software --project ridi-apps-api ./dist && sentry-cli sourcemaps upload --org hood-software --project ridi-apps-api ./dist"
+	},
+	"dependencies": {
+		"@ridi/api-contracts": "workspace:^",
+		"@ridi/db-queries": "workspace:^",
+		"@ridi/logger": "workspace:^",
+		"@ridi/maps-api": "workspace:^",
+		"@ridi/messaging": "workspace:^",
+		"@ridi/stripe-api": "workspace:^",
+		"@sentry/cli": "^2.42.4",
+		"@sentry/cloudflare": "^9.8.0",
+		"@supabase/supabase-js": "^2.48.1",
+		"@ts-rest/serverless": "^3.51.0",
+		"@turf/turf": "^7.2.0",
+		"pino": "^9.6.0",
+		"postgres": "^3.4.5",
+		"remeda": "^2.20.0",
+		"resend": "^4.5.1",
+		"zod": "^3.24.1"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20250129.0",
+		"wrangler": "^4.12.0"
+	}
 }
